# VariantVisitorInterface

./: CMakeLists.txt  LICENSE  README.md
examples/: animals.h  example_VariantVisitor.cpp
inc/: VariantVisitorInterface.h
